MDEV-9560 Mariadb 10.1 Crashes when replicating from 10.0

don't crash in debug builds. issue an error message on corrupt event